# hummingbot

./: docker-compose.yml
gateway-files/logs/: logs_gateway_app.log.2026-01-08
hummingbot-app/: .eslintrc.json  .gitignore  README.md  index.html  package.json  tailwind.config.js
hummingbot-app/src/: App.tsx  index.css
hummingbot-app/src-tauri/: Cargo.toml  tauri.conf.json
hummingbot-app/src-tauri/src/: lib.rs  main.rs
hummingbot-app/src/components/layout/: Header.tsx  Sidebar.tsx
hummingbot-app/src/components/pages/: Connectors.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx  Strategies.tsx  Trading.tsx
hummingbot-app/src/lib/: AppContext.tsx  api.ts  utils.ts
