[package]
name = "hummingbot-app"
version = "0.1.0"
description = "Hummingbot Desktop App"
authors = ["Hummingbot Foundation"]
edition = "2021"

[lib]
name = "hummingbot_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
